# python_generate

./: .gitignore  CMakeLists.txt  autogenerate.py  mavgen.py  mavgen_c.py  mavparse.py  mavschema.xsd  mavtemplate.py  readme.md  test_python.py
C/: protocol.h
SD_Dir/: 2020_08_05_09_08_16.txt
c_test/: mavlink_testsuit_main.c  mavlink_udp.c
definition/mavlink/: common.xml
definition/msg/: msg.xml
definition/parameters/: MockLink.Parameter.MetaData.json
mav_pyutils/: autogen_mavc.py  mav_pyutils.cmake  mavcrc.py  mavgen.py  mavgen_c.py  mavparse.py  mavtemplate.py
mav_pyutils/c_test/: mavlink_testsuit_main.c
msg_pyutils/: CMakeLists.txt  Message_Attitude.h  Message_Base.h  Message_Position.h  autogen_msgc.py  main.cpp  msg_logger.cpp  msg_logger.h  msgparse.py  msgtemplate.py  test.ulg
msg_pyutils/ulog_demo/: Message_Attitude.h  Message_Base.h  Message_Position.h  main.cpp  messages.h  msg_logger.cpp  msg_logger.h  ulog_demo.cmake
msg_pyutils/ulog_exam/: 010.txt  028.txt  030.txt  032.txt  035.txt  core.py  extract_gps_dump.py  info.py  params.py  test.ulg  test_Attitude_1.csv  test_Position_1.csv  ulog2csv.py  ulog2kml.py
output/mavlink_for_28377/: checksum.h  mavlink_get_info.h  mavlink_helpers.h  mavlink_types.h  protocol.h
output/msg_for_28377/: msg_base.h  msg_for_28377.cmake  msg_include.h  msg_src.cpp  test_msg.cpp
output/parameter_for_28377/: Params_Macro.h  Params_Repo_Def.h
param_pyutils/: param_generate.py
pyutils/: mavgen.py  mavgen_c.py  mavparse.py  mavtemplate.py
test_env/: test_env.cmake
tmp/common/: common.h  (+202 more)
(+208 files in other folders)
